@@ -252,9 +252,7 @@ int gethex (const char **sp, FPI *fpi, Long *exp, Bigint **bp, int sign)
  ovfl:
 		Bfree(b);
  ovfl1:
-#ifndef NO_ERRNO
-		errno = ERANGE;
-#endif
+		SET_ERRNO(ERANGE);
 		return STRTOG_Infinite | STRTOG_Overflow | STRTOG_Inexhi;
 	}
 	irv = STRTOG_Normal;
@@ -278,18 +276,14 @@ int gethex (const char **sp, FPI *fpi, Long *exp, Bigint **bp, int sign)
  dret:
 					*bp = b;
 					*exp = fpi->emin;
-#ifndef NO_ERRNO
-					errno = ERANGE;
-#endif
+					SET_ERRNO(ERANGE);
 					return STRTOG_Denormal | STRTOG_Inexhi
 						| STRTOG_Underflow;
 				}
 			}
 			Bfree(b);
  retz:
-#ifndef NO_ERRNO
-			errno = ERANGE;
-#endif
+			SET_ERRNO(ERANGE);
 			return STRTOG_Zero | STRTOG_Inexlo | STRTOG_Underflow;
 		}
 		k = n - 1;
